# fetchbot

./: .gitignore  .gitmodules  README.md
ball_follow/: README.md  package.xml  setup.cfg  setup.py
ball_follow/ball_follow/: camera.py  detect_ball.py  follow_ball.py  inhibit_detect_ball.py  inhibit_follow_ball.py  my_proc_image.py  process_image.py  state_machine.py
ball_follow/config/: ball_follow_params_example.yaml  ball_follow_params_robot.yaml
ball_follow/launch/: ball_follow.launch.py  camera.launch.py  camera.launch.txt
ball_follow/test/: test_camera.py  test_detect_ball.py  test_follow_ball.py  test_follow_ball_integration.py  test_inhibit_detected_ball.py  test_inhibit_follow_ball.py
ball_tracker/: setup.py
ball_tracker/config/: ball_tracker_params_example.yaml  ball_tracker_params_robot.yaml
diffdrive/: CMakeLists.txt  diffdrive.xml  package.xml
diffdrive/hardware/: diffbot_system.cpp
diffdrive/hardware/include/diffdrive/: L298N.hpp  diffbot_system.hpp  wheel.hpp
fetchbot_bringup/: CMakeLists.txt  package.xml
fetchbot_bringup/launch/: fetchbot.launch.py  fetchbot_gazebo.launch.py  fetchbot_gazebo.launch.xml  layer0.launch.py  layer0_only.launch.py  layer0_sim.launch.py  layer0_sim.launch.xml  layer1.launch.py  layer1_only.launch.py  layer1_sim.launch.py  layer1_sim.launch.xml  layer2_only.launch.py  layer2_sim.launch.py  sim.launch.py
fetchbot_bringup/rviz/: urdf_config.rviz
fetchbot_bringup/worlds/: ball_follow_test.world  empty_room.world  empty_room_ball_left_side.world  empty_room_ball_right_side.world  empty_room_with_ball.world  empty_world.world  five_obs_test_7.world  my_world.world  obstacles.world  room.world  three_obs_test_5.world  three_obs_test_6.world  two_obs_test_3.world  two_obs_test_4.world
fetchbot_description/: CMakeLists.txt  package.xml
fetchbot_description/config/: diffdrive_controllers.yaml  my_controllers.yaml  obstacle_avoidance_params.yaml
fetchbot_description/urdf/: camera.xacro  claw.xacro  common_properties.xacro  diffdrive.ros2_control.xacro  fetchbot.urdf.xacro  gazebo_controller.xacro  lidar.xacro  mobile_base.xacro  ros2_control_gazebo.xacro
fetchbot_interfaces/: CMakeLists.txt  package.xml
fetchbot_interfaces/msg/: BallInfo.msg  Force.msg  Heading.msg
fetchbot_monitor/: package.xml  setup.cfg  setup.py
fetchbot_monitor/fetchbot_monitor/: fetchbot_robot_monitor.py
fetchbot_testing/: package.xml  setup.cfg  setup.py
fetchbot_testing/fetchbot_testing/: ball_mover.py  heading_to_twist_pub.py  simulated_claw_controller.py  test_avoid.py  test_ball_detection.py  test_follow_ball.py  test_node.py
fetchbot_testing/resource/: video_tags.json  video_tags_30_sec.json
grab_ball/: README.md  package.xml  setup.cfg  setup.py
grab_ball/config/: grab_ball_params_example.yaml  grab_ball_params_robot.yaml
grab_ball/distance_models/: distance_calibration.py  graspable_classifier.joblib  rf_dist_model_0.3m_calib_graspel.joblib  rf_dist_model_with_1m_calib.joblib
grab_ball/grab_ball/: ball_grabber.py  claw_controller.py  distance_classifier.py  hardware.py  locomotion_controller.py  message_counter.py  video_frame_publisher.py
grab_ball/hardware_librery/: ADCReader.py  L298N.py
grab_ball/launch/: grab_ball.launch.py
hardware_librery/: ADCReader.py  Encoder.py  L298N.py  MPU6050.py  RGBLed.py  Switch.py
obstacle_avoidance/: package.xml  setup.cfg  setup.py
obstacle_avoidance/obstacle_avoidance/: avoid_runaway_suppressor  bumper.py  (+7 more)
orient_home/: package.xml  setup.cfg  setup.py
suppressor_inhibitor/: package.xml  setup.cfg  setup.py
wander/: package.xml  setup.py
(+48 files in other folders)
